--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start:prod": "node ./dist/server.js",
     "start:dev": "tsnd --respawn src/server.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "keywords": [],
   "author": "",
